.k8s/live-1/api-sandbox/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: claim-for-crown-court-defence-worker
  namespace: cccd-api-sandbox
spec:
  replicas: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      app: cccd
      tier: worker
  template:
    metadata:
      labels:
        app: cccd
        tier: worker
    spec:
      containers:
        - name: cccd-worker
          imagePullPolicy: Always
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/laa-get-paid/cccd:set-me
          command: ['bundle', 'exec', 'sidekiq']
          readinessProbe:
            exec:
              command: ['bin/worker_healthcheck']
            initialDelaySeconds: 20
            periodSeconds: 30
          livenessProbe:
            exec:
              command: ['bin/worker_healthcheck']
            initialDelaySeconds: 30
            periodSeconds: 300

          # configMapRef: non-secret env vars defined in `app-config.yaml`
          # secretRef: secret env vars defined by app secrets
          # WHERE env var name matches key name
          #
